Fix spacing between map and disclaimer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /*----------- Preloader -----------*/
 #content {
     margin: 0 auto;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     width: 80%;
     max-width: 978px;
 }
